--- a/LexiTwitter/MainWindow.xaml
+++ b/LexiTwitter/MainWindow.xaml
@@ -5,18 +5,20 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LexiTwitter"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
+        Title="MainWindow" Height="453.387" Width="714.894">
     <Grid>
-        <RichTextBox x:Name="textboxforusers" HorizontalAlignment="Left" Height="83" Margin="28,38,0,0" VerticalAlignment="Top" Width="173">
-            <FlowDocument>
-                <Paragraph>
-                    <Run Text=""/>
-                </Paragraph>
-            </FlowDocument>
-        </RichTextBox>
-        <TextBox x:Name="TextBoxNewTweet" HorizontalAlignment="Left" Height="23" Margin="236,49,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
-        <Button x:Name="ButtonSendTweet" Content="SendTweet!" HorizontalAlignment="Left" Margin="377,52,0,0" VerticalAlignment="Top" Width="75" Click="ButtonSendTweet_Click"/>
-        <Button x:Name="ButtonReTweet" Content="Retweet" HorizontalAlignment="Left" Margin="377,101,0,0" VerticalAlignment="Top" Width="75" Click="ButtonReTweet_Click"/>
+        <TextBox x:Name="TextBoxNewTweet" HorizontalAlignment="Left" Height="23" Margin="40,28,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="208"/>
+        <Button x:Name="ButtonSendTweet" Content="SendTweet!" HorizontalAlignment="Left" Margin="253,31,0,0" VerticalAlignment="Top" Width="75" Click="ButtonSendTweet_Click"/>
+        <Button x:Name="ButtonReTweet" Content="Retweet" HorizontalAlignment="Left" Margin="565,370,0,0" VerticalAlignment="Top" Width="75" Click="ButtonReTweet_Click"/>
+        <ListView x:Name="viewtweets" HorizontalAlignment="Left" Height="256" Margin="40,89,0,0" VerticalAlignment="Top" Width="618">
+            <ListView.View>
+                <GridView>
+                    <GridViewColumn Header="TweetID" DisplayMemberBinding="{Binding Path=ID}"/>
+                    <GridViewColumn Header="Author" DisplayMemberBinding="{Binding Path=Author}"/>
+                    <GridViewColumn Header="Tweet" DisplayMemberBinding="{Binding Path=Tweet}"/>
+                </GridView>
+            </ListView.View>
+        </ListView>
 
     </Grid>
 </Window>
